# pybasique

./: Procfile  Procfile.dev  README.md  env.sample  manage.py  pyproject.toml  requirements.txt
locale/fr/LC_MESSAGES/: django.mo  django.po
pages/: urls.py
pages/templates/: index.html
pybasique/: asgi.py  settings.py  urls.py  wsgi.py
theme/static_src/: package-lock.json
theme/static_src/src/: styles.css
theme/templates/: base.html  half.html
theme/templates/django/forms/: default.html
theme/templates/django/forms/errors/list/: default.html
theme/templates/django/forms/widgets/: input.html
theme/templates/registration/: logged_out.html  login.html
user/: urls.py  views.py
user/templates/: signup.html
